--- a/css/register.css
+++ b/css/register.css
@@ -16,7 +16,7 @@ nav {
     font-weight: bold;
 }
 
-/* Login container */
+/* Registratie container */
 .container {
     width: 80%;
     max-width: 400px;
@@ -44,7 +44,7 @@ input {
     border-radius: 5px;
     font-size: 16px;
     text-align: center;
-    background: #e8f5e9; /* Lichtgroene achtergrond zoals in je collectie-items */
+    background: #e8f5e9;
 }
 
 /* Knoppen */
