--- a/css/register.css
+++ b/css/register.css
@@ -1,3 +1,8 @@
+/*---------------------------//
+// Naam script     : register.css
+// Omschrijving     : style van de registerpagina
+// Naam ontwikkelaar : vooral semere en een beetje sam
+//---------------------------*/
 /* Algemene stijlen */
 body {
     font-family: Arial, sans-serif;
